--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
     <script>
         const activities = [
             "Day Off / Solo Queue", // Domingo
-            "Scrim",              // Segunda
-            "Teórico",            // Terça
-            "Scrim",              // Quarta
-            "Teórico",            // Quinta
-            "Day Off / Solo Queue", // Sexta
+            "Day Off / Solo Queue",              // Segunda
+            "Scrim",            // Terça
+            "Teórico",              // Quarta
+            "Scrim",            // Quinta
+            "Teórico", // Sexta
             "Day Off / Solo Queue"  // Sábado
         ];
 
