--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     // Adiciona o título da próxima semana
                     const weekTitle = document.createElement('div');
                     weekTitle.className = 'week-title';
-                    weekTitle.textContent = 'Próxima Semana';
+                    weekTitle.textContent = '';
                     calendar.appendChild(weekTitle);
                 }
             }
